components/qi5xo4ojt-go/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: qi5xo4ojt-go
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: qi5xo4ojt-go 
  name: qi5xo4ojt-go
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: qi5xo4ojt-go
