components/qi5xo4ojt-go/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: qi5xo4ojt-go
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: qi5xo4ojt-go 
  name: qi5xo4ojt-go
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: qi5xo4ojt-go
    weight: 100
